# StardustLamentEngine

./: .gitignore  LICENSE.txt  README.md  README_正常版.md  main.py  poisson_disk_sampling.py  pyproject.toml
galaxy_system/: __init__.py  logger.py  stellar_courtyard.py
galaxy_system/models/: __init__.py  astral_canopy.py  celestial_plume.py  stardust_core.py  stellar_pearl.py  vector3d.py
galaxy_system/modules/: __init__.py  gravity_loom.py  orbital_loom.py
galaxy_system/modules/boundary/: __init__.py  base.py  infinite.py  reflective.py
