[project]
name = "stardust-lament-engine"
version = "0.1.0"
description = "星尘挽歌引擎"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]